--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  send-slack-msg:
+    uses: ./.github/actions/slack
+    secrets: inherit
+    with:
+      message: 'testing commerce-sdk unit tests'
   linux-unit-tests:
     strategy:
       matrix:
@@ -18,10 +23,6 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           cache: npm
-      - uses: ./.github/actions/slack
-        secrets: inherit
-        with:
-          message: 'testing commerce-sdk unit tests'
       - name: Cache node modules
         id: cache-nodemodules
         uses: actions/cache@v3
