--- a/.github/actions/slack/action.yml
+++ b/.github/actions/slack/action.yml
@@ -5,6 +5,7 @@ on:
       message: 
         required: true
         description: Message to be sent to slack
+    using: composite
     uses: slackapi/slack-github-action@v1.23.0
     with:
       # For posting a rich message using Block Kit
