--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,21 +31,22 @@ jobs:
       - run: npm run build
       - run: npm test
   slack-job:
-    uses: slackapi/slack-github-action@v1.23.0
-    with:
-      # For posting a rich message using Block Kit
-      payload: |
-        {
-          "blocks": [
-            {
-              "type": "section",
-              "text": {
-                "type": "mrkdwn",
-                "text": "done with unit tests for commerce-sdk"
+    steps:
+    - uses: slackapi/slack-github-action@v1.23.0
+      with:
+        # For posting a rich message using Block Kit
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "done with unit tests for commerce-sdk"
+                }
               }
-            }
-          ]
-        }
-    env:
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
