--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       - run: npm run build
       - run: npm test
   slack-job:
+    runs-on: ubuntu-latest
     steps:
     - uses: slackapi/slack-github-action@v1.23.0
       with:
