test slack string interpolation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "done with unit tests for commerce-sdk"
+                  "text": "${{ runner.os }} testing string interpolation"
                 }
               }
             ]
