add manual trigger to publish workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: tests # runs unit and integration tests
 
 on:
   push:
-    branches-ignore: [master] # TODO: update this when renaming default branch to main
+    branches-ignore: [main] # TODO: update this when renaming default branch to main
   workflow_dispatch:
 
 jobs:
