--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
     "@types/node-fetch": "^2.5.12",
     "@types/retry": "^0.12.1",
     "@types/sinon": "^9.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "chai": "^4.3.5",
     "depcheck": "^0.9.2",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-jsdoc": "^41.1.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-jsdoc": "^25.4.3",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
@@ -79,13 +79,10 @@
     "snyk": "^1.836.0",
     "sort-package-json": "^1.53.1",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.24.1",
-    "typedoc-plugin-external-module-map": "^1.3.2",
+    "typedoc": "^0.17.8",
+    "typedoc-plugin-external-module-map": "1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^5.0.4"
-  },
-  "peerDependencies": {
-    "typedoc": "0.11.1"
+    "typescript": "^3.9.10"
   },
   "publishConfig": {
     "access": "public"
