--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
   linux-tests:
     strategy:
       matrix:
-        node: [14, 16, 18]
+        node: [12, 14, 16, 18]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
