fix publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
+      - run: npm install snyk --legacy-peer-deps
+      - run: npm run snyk:auth ${{ secrets.SNYK_TOKEN }}
+      - run: npm ci --legacy-peer-deps
       - run: npm run build
       - run: npm publish
         env:
