--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -3,3 +3,4 @@ ignores:
   - typedoc-plugin-external-module-map # Used by typedoc in `npm run doc`
   - typedoc-plugin-nojekyll # Used by typedoc in `npm run doc`
   - node-fetch # We only use @types/node-fetch, not node-fetch itself
+  - retry # Use OperationOptions from retry in templates but not recognized by depcheck
