--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,18 +18,18 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           cache: npm
-      - name: Cache node modules
-        id: cache-nodemodules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: "**/node_modules"
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+      # - name: Cache node modules
+      #   id: cache-nodemodules
+      #   uses: actions/cache@v3
+      #   env:
+      #     cache-name: cache-node-modules
+      #   with:
+      #     path: "**/node_modules"
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
       # - run: npm install snyk --legacy-peer-deps
       # - run: npm run snyk:auth ${{ secrets.SNYK_TOKEN }}
       - run: npm install --legacy-peer-deps
-        if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
+        # if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
       - run: npm run build
       - name: Unit tests
         run: npm test
