Feat: Add support for custom query params @W-14391914@ (#396)
* upgrade typescript

* fix new typescript errors

* add support for custom query params in template

* update operations template

* remove lodash

* fix unit test

* fix type errors in unit test

* add custom query param type to slas client interface

* fix unit test

* update depcheck config

* update depcheck config

* fix unit test

* add unit test

* add node 18 and 20 to CI and temporarily disable caching

* re-enable caching

* try and remove snyk step in CI

* test CI without snyk step and caching

* revert CI test.yml

* remove circle CI from README

* revert slas.ts changes and update README

* remove old node versions

* throw error when invalid parameter is passed

* add unit test for invalid params

--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -3,3 +3,5 @@ ignores:
   - typedoc-plugin-external-module-map # Used by typedoc in `npm run doc`
   - typedoc-plugin-nojekyll # Used by typedoc in `npm run doc`
   - node-fetch # We only use @types/node-fetch, not node-fetch itself
+  - retry # Use OperationOptions from retry in templates but not recognized by depcheck
+  - '@types/retry' # Corresponds to retry
