--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-apis/** linguist-vendored
+apis/** linguist-generated
+testIntegration/stagingApis/** linguist-generated
 test/raml/** -linguist-detectable
