Revert "Update .gitattributes"
This reverts commit 2af825ba83336c932847760e2691924923388f36.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-apis/** linguist-generated
-testIntegration/stagingApis/** linguist-generated
+apis/** linguist-vendored
 test/raml/** -linguist-detectable
