--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && git checkout apis/search && npm run diffApis",
-    "updateApis:Oas": "npm run backupApis && ts-node src/updateApis.ts && git checkout apis/search && npm run diffApis:Oas"
+    "updateApis:Oas": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:Oas"
   },
   "mocha": {
     "file": [
