Generate SDK from OAS

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prepack": "npm run build",
     "prepare": "snyk protect",
     "renderTemplates": "ts-node src/generate.ts",
+    "renderTemplates:oas": "ts-node src/generate-oas.ts",
     "pretest": "npm run lint && npm run depcheck",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
