Fix tests and lint

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -4,7 +4,8 @@
   "check-coverage": true,
   "exclude": [
     "src/generate.ts",
-    "src/updateApis.ts"
+    "src/updateApis.ts",
+    "src/generate-oas.ts"
   ],
   "extends": "@istanbuljs/nyc-config-typescript",
   "extension": [
