--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
+    "@commerce-apps/raml-toolkit": "0.6.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.21",
     "@types/fs-extra": "^9.0.12",
