--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "scripts": {
     "backupApis": "rm -rf updateApisTmp && mkdir updateApisTmp && mv apis updateApisTmp/oldApis",
     "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "build:oas": "tsc",
     "ci": "rm -rf node_modules && yarn install",
     "clean": "rm -rf renderedTemplates dist",
     "depcheck": "depcheck",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/ramlDiff.txt",
-    "diffApis:Oas": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
+    "diffApis:oas": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
@@ -38,7 +39,7 @@
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && git checkout apis/search && npm run diffApis",
-    "updateApis:Oas": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:Oas"
+    "updateApis:oas": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
   },
   "mocha": {
     "file": [
@@ -53,7 +54,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "0.6.0",
+    "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.21",
     "@types/fs-extra": "^9.0.12",
@@ -79,11 +80,11 @@
     "prettier": "^2.3.2",
     "sinon": "^9.2.4",
     "sort-package-json": "^1.50.0",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^3.9.10"
+    "typescript": "^4.4.4"
   },
   "publishConfig": {
     "access": "public"
