--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "./base.tsconfig.json",
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
@@ -10,6 +11,6 @@
         "dist"
     ],
     "include": [
-        "./renderedTemplates"
+        "./renderedTemplates/**/*.ts"
       ]
 }
