Update commands and typedoc dependencies

--- a/package.json
+++ b/package.json
@@ -20,26 +20,24 @@
   "scripts": {
     "backupApis": "rm -rf updateApisTmp && mkdir updateApisTmp && mv apis updateApisTmp/oldApis",
     "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
-    "build:oas": "tsc",
+    "build:oas": "tsc && eslint dist --ext .ts,.js --quiet --fix",
     "ci": "rm -rf node_modules && yarn install",
-    "clean": "rm -rf renderedTemplates dist",
+    "clean": "rm -rf dist",
     "depcheck": "depcheck",
-    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/ramlDiff.txt",
-    "diffApis:oas": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
+    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
+    "lint:dist": "eslint dist --ext .ts,.js --quiet --fix",
     "prepack": "npm run build",
     "prepare": "snyk protect",
-    "renderTemplates": "ts-node src/generate.ts",
-    "renderTemplates:oas": "ts-node src/generate-oas.ts",
+    "renderTemplates": "ts-node src/generate-oas.ts",
     "pretest": "npm run lint && npm run depcheck",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
-    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && git checkout apis/search && npm run diffApis",
-    "updateApis:oas": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
+    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
   },
   "mocha": {
     "file": [
@@ -70,9 +68,9 @@
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-jsdoc": "^25.4.3",
+    "eslint-plugin-jsdoc": "^50.7.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
@@ -81,8 +79,8 @@
     "sinon": "^9.2.4",
     "sort-package-json": "^1.50.0",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.17.8",
-    "typedoc-plugin-external-module-map": "^1.2.1",
+    "typedoc": "^0.28.5",
+    "typedoc-plugin-external-module-map": "^2.2.0",
     "typedoc-plugin-nojekyll": "^1.0.1",
     "typescript": "^4.4.4"
   },
