--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "commerce-sdk",
-  "version": "2.5.0",
+  "version": "4.2.0",
   "description": "Salesforce Commerce Cloud SDK",
-  "homepage": "https://developer.commercecloud.com/s/",
+  "homepage": "https://developer.salesforce.com/developer-centers/commerce-cloud",
   "repository": {
     "type": "git",
     "url": "https://github.com/SalesforceCommerceCloud/commerce-sdk"
@@ -23,7 +23,6 @@
     "build:oas": "tsc && eslint dist --ext .ts,.js --quiet --fix",
     "ci": "rm -rf node_modules && yarn install",
     "clean": "rm -rf dist",
-    "depcheck": "depcheck",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
@@ -34,7 +33,7 @@
     "prepack": "npm run build",
     "prepare": "snyk protect",
     "renderTemplates": "ts-node src/generate-oas.ts",
-    "pretest": "npm run lint && npm run depcheck",
+    "pretest": "npm run lint",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
@@ -45,28 +44,28 @@
     ]
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.5.3",
-    "lodash": "^4.17.21",
-    "retry": "^0.12.0",
-    "snyk": "^1.522.0",
-    "tslib": "^2.3.0"
+    "@commerce-apps/core": "^1.7.0",
+    "nanoid": "^3.3.4",
+    "retry": "^0.13.1",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.21",
-    "@types/fs-extra": "^9.0.12",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/handlebars-helpers": "^0.5.3",
     "@types/lodash": "^4.14.171",
     "@types/mocha": "^8.2.3",
+    "@types/node-fetch": "^2.5.12",
     "@types/retry": "^0.12.1",
     "@types/sinon": "^9.0.11",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "chai": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "chai": "^4.3.5",
     "depcheck": "^0.9.2",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-jsdoc": "^50.7.1",
     "eslint-plugin-prettier": "^3.4.0",
@@ -75,10 +74,11 @@
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "sinon": "^9.2.4",
-    "sort-package-json": "^1.50.0",
-    "ts-node": "^10.9.1",
+    "snyk": "^1.836.0",
+    "sort-package-json": "^1.53.1",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.28.5",
     "typedoc-plugin-external-module-map": "^2.2.0",
     "typedoc-plugin-nojekyll": "^1.0.1",
