--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,9 +13,9 @@
   ],
   "extends": [
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
     "plugin:jsdoc/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "rules": {
     "@typescript-eslint/naming-convention": [
@@ -86,7 +86,6 @@
       ],
       "rules": {
         "@typescript-eslint/ban-ts-ignore": "warn",
-        "@typescript-eslint/camelcase": "warn",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "warn",
         "@typescript-eslint/naming-convention": [
