--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@types/chai": "^4.3.0",
     "@types/fs-extra": "^9.0.13",
     "@types/handlebars-helpers": "^0.5.3",
-    "@types/lodash": "^4.14.171",
     "@types/mocha": "^8.2.3",
     "@types/node-fetch": "^2.5.12",
     "@types/retry": "^0.12.1",
@@ -68,11 +67,12 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-jsdoc": "^50.7.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tsdoc": "^0.4.0",
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
+    "nock": "^13.2.2",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "sinon": "^9.2.4",
