--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prepare": "snyk protect",
     "renderTemplates": "ts-node src/generate-oas.ts",
     "pretest": "npm run lint",
+    "snyk:auth": "snyk auth",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
