--- a/.nycrc.json
+++ b/.nycrc.json
@@ -3,8 +3,8 @@
   "branches": 80,
   "check-coverage": true,
   "exclude": [
-    "src/generate.ts",
     "src/updateApis.ts",
+    "src/lib/config.ts",
     "src/generate-oas.ts"
   ],
   "extends": "@istanbuljs/nyc-config-typescript",
