--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "snyk:auth": "snyk auth",
     "test": "nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
-    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis:oas"
+    "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis"
   },
   "mocha": {
     "file": [
@@ -83,7 +83,7 @@
     "typedoc": "^0.28.5",
     "typedoc-plugin-external-module-map": "^2.2.0",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^4.4.4"
+    "typescript": "^5.8.3"
   },
   "publishConfig": {
     "access": "public"
