--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,6 @@
   "plugins": [
     "@typescript-eslint",
     "@typescript-eslint/eslint-plugin",
-    "tsdoc",
     "header",
     "jsdoc"
   ],
@@ -53,7 +52,7 @@
       ]
     ],
     "jsdoc/require-description": [
-      "error",
+      "warn",
       {
         "checkConstructors": false
       }
@@ -76,8 +75,7 @@
     "jsdoc/require-param-type": "off",
     "jsdoc/require-returns-check": "error",
     "jsdoc/require-returns-description": "error",
-    "jsdoc/require-returns-type": "off",
-    "tsdoc/syntax": "error"
+    "jsdoc/require-returns-type": "off"
   },
   "overrides": [
     {
