Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
   ],
   "scripts": {
     "backupApis": "rm -rf updateApisTmp && mkdir updateApisTmp && mv apis updateApisTmp/oldApis",
-    "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
-    "build:oas": "tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "build": "npm run clean && npm run renderTemplates && npm run compile",
     "ci": "rm -rf node_modules && yarn install",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf renderedTemplates dist",
+    "compile": "tsc && eslint dist --ext .ts,.js --quiet --fix",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
-    "lint:dist": "eslint dist --ext .ts,.js --quiet --fix",
     "prepack": "npm run build",
     "prepare": "snyk protect",
     "renderTemplates": "ts-node src/generate-oas.ts",
