Revert typedoc version bump

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ci": "rm -rf node_modules && yarn install",
     "clean": "rm -rf renderedTemplates dist",
     "compile": "tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "depcheck": "depcheck",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/oasDiff.txt -s oas",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
@@ -78,8 +79,8 @@
     "snyk": "^1.836.0",
     "sort-package-json": "^1.53.1",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.28.5",
-    "typedoc-plugin-external-module-map": "^2.2.0",
+    "typedoc": "^0.17.8",
+    "typedoc-plugin-external-module-map": "1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
     "typescript": "^4.4.4"
   },
