Update templates and omit some files

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ dist
 
 .idea
 
+# Openapi-generator generates this when running renderTemplates
+openapitools.json
+
 # Release folders
 renderedTemplates
 .vscode
