--- a/.nycrc.json
+++ b/.nycrc.json
@@ -5,7 +5,9 @@
   "exclude": [
     "src/updateApis.ts",
     "src/lib/config.ts",
-    "src/generate-oas.ts"
+    "src/generate-oas.ts",
+    "src/static/helpers/index.ts",
+    "src/lib/utils.ts"
   ],
   "extends": "@istanbuljs/nyc-config-typescript",
   "extension": [
