--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
     "extends": "./base.tsconfig.json",
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "compilerOptions": {
-        "outDir": "./dist",
-        "skipLibCheck": true
+        "outDir": "./dist"
     },
     "exclude": [
         "node_modules",
