Pin nested dependency version to resolve ts lib check errors

--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "typedoc-plugin-nojekyll": "^1.0.1",
     "typescript": "^4.4.4"
   },
+  "resolutions": {
+    "@rdfjs/types": "v1.1.2"
+  },
   "publishConfig": {
     "access": "public"
   },
