--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "sinon": "^9.2.4",
     "snyk": "^1.996.0",
     "sort-package-json": "^1.53.1",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "1.2.1",
