Fix depcheck and renderTemplates

--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -5,3 +5,4 @@ ignores:
   - node-fetch # We only use @types/node-fetch, not node-fetch itself
   - retry # Use OperationOptions from retry in templates but not recognized by depcheck
   - '@types/retry' # Corresponds to retry
+  - '@openapitools/openapi-generator-cli' # Used by openapi-generator-cli in `npm run renderTemplates`
