--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "@rdfjs/types": "v1.1.2"
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.7.0",
+    "@commerce-apps/core": "^1.8.0",
     "nanoid": "^3.3.4",
     "retry": "^0.13.1",
-    "tslib": "^2.4.1"
+    "tslib": "^2.4.1",
+    "@openapitools/openapi-generator-cli": "^2.20.0"
   },
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
