--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -16,8 +16,7 @@
     "bundle:install": "npm run bundle && npm install",
     "bundle:clean:install": "npm run clean:all && npm run bundle:install",
     "test:prod": "npm run bundle:install && npm run test",
-    "test:staging": "COMMERCE_SDK_INPUT_DIR=testIntegration/stagingApis npm run test:prod",
-    "test:ci": "npm run test:prod && npm run test:staging",
+    "test:ci": "npm run test:prod",
     "clean": "rm -rf commerce-*.tgz || true",
     "clean:node": "rm -rf node_modules || true",
     "clean:all": "npm run clean && npm run clean:node"
@@ -43,7 +42,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "depcheck": "^0.9.2",
-    "eslint": "^7.4.0",
+    "eslint": "^8.38.0",
     "esm": "^3.2.25",
     "fs-extra": "^9.1.0",
     "mocha": "^7.1.2",
