--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
   },
   "dependencies": {
     "@commerce-apps/core": "^1.8.0",
+    "@openapitools/openapi-generator-cli": "^2.20.0",
     "nanoid": "^3.3.4",
     "retry": "^0.13.1",
-    "tslib": "^2.4.1",
-    "@openapitools/openapi-generator-cli": "^2.20.0"
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
