use RAML toolkit

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "file:../raml-toolkit",
+    "@commerce-apps/raml-toolkit": "^0.7.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.0",
     "@types/fs-extra": "^9.0.13",
